--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "opn": "~3.0.2",
-    "gulp": "~3.9.0",
-    "gulp-connect": "~2.2.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-cssmin": "~0.1.7",
-    "gulp-uglify": "~1.3.0",
-    "gulp-watch": "~4.3.5",
-    "gulp-plumber": "~1.0.1",
+    "browser-sync": "^2.9.3",
+    "falafel": "^1.2.0",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "~2.3.1",
+    "gulp-compass": "~2.1.0",
+    "gulp-concat": "~2.6.0",
+    "gulp-connect": "~2.2.0",
+    "gulp-cssmin": "~0.1.7",
     "gulp-imagemin": "~2.3.0",
-    "gulp-webserver": "~0.9.1",
-    "gulp-sass": "~2.0.4",
-    "gulp-uncss": "~1.0.3",
+    "gulp-plumber": "~1.0.1",
+    "gulp-sass": "^2.0.4",
     "gulp-strip-css-comments": "~1.2.0",
-    "gulp-compass": "~2.1.0"
+    "gulp-uglify": "~1.3.0",
+    "gulp-uncss": "~1.0.3",
+    "gulp-watch": "~4.3.5",
+    "gulp-webserver": "~0.9.1",
+    "opn": "~3.0.2",
+    "tape": "^4.2.0",
+    "through": "^2.3.8",
+    "uncommentify": "^0.1.1"
   }
 }
